cabal-version:      2.4
name:               els
version:            0.1.0.0
license:            BSD-3-Clause
copyright:          Compl Yue
maintainer:         compl.yue@icloud.com
author:             Compl Yue
stability:          experimental
homepage:           https://github.com/e-wrks/els
bug-reports:        https://github.com/e-wrks/els/issues
synopsis:           language server for Đ (Edh)
description:
  Please see the README on Github at <https://github.com/e-wrks/els>

category:           Programming,Language
build-type:         Simple
extra-source-files:
  README.md
  CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/e-wrks/els
  subdir:   host.hs

library
  exposed-modules:
    Language.Edh.LS
    Language.Edh.Meta.Model

  other-modules:
    Language.Edh.LS.BaseLSP
    Language.Edh.LS.LangServer
    Language.Edh.LS.RT
    Language.Edh.Meta.Analyze
    Language.Edh.Meta.RtTypes

  hs-source-dirs:     src
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    BangPatterns
    ConstraintKinds
    DataKinds
    FlexibleContexts
    FlexibleInstances
    GADTs
    KindSignatures
    LambdaCase
    OverloadedStrings
    ScopedTypeVariables
    TupleSections
    TypeApplications
    TypeOperators
    ViewPatterns

  ghc-options:        -Wall
  build-depends:
    , base                  >=4.12
    , binary
    , binary-search
    , bytestring
    , clock
    , containers
    , directory
    , edh
    , elr
    , filepath
    , hashable
    , lossless-decimal
    , mtl
    , nedh
    , network
    , scientific
    , stm                   >=2.5
    , text
    , time
    , transformers
    , unix
    , unordered-containers
    , vector

executable els
  main-is:            Main.hs
  hs-source-dirs:     server
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    BangPatterns
    ConstraintKinds
    DataKinds
    FlexibleContexts
    FlexibleInstances
    GADTs
    KindSignatures
    LambdaCase
    OverloadedStrings
    ScopedTypeVariables
    TupleSections
    TypeApplications
    TypeOperators
    ViewPatterns

  ghc-options:        -Wall -threaded "-with-rtsopts=-maxN31 -qg"
  build-depends:
    , base              >=4.12
    , bytestring
    , edh
    , elr
    , els
    , lossless-decimal
    , mtl
    , nedh
    , stm               >=2.5
    , text
    , transformers
    , vector
